--- a/style.css
+++ b/style.css
@@ -88,6 +88,21 @@ h2 {
 .section2 {
     display: flex;
     flex-direction: column;
-    
-    
+    background-color: #e5e7eb;
+    align-items: center;
+    padding: 60px;
+}
+.quote {
+    font-size: 36px;
+    font-weight: 100;
+    font-style: italic;
+    color: #1f2937;
+    max-width: 800px;
+    margin: 0;
+}
+.credit {
+    color: #1f2937;
+    font-weight: 800;
+    text-align: right;
+    margin: 0;
 }
