--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {border: 1px solid red;}
+/* * {border: 1px solid red;} */
 
 body {
     margin: 0;
@@ -52,13 +52,15 @@ button {
     background-color: #3882f6;
     font-size: 18px;
     color: #f9faf8;
+    border: 0;
     border-radius: 6px;
-    padding: 6px;
+    padding: 6px 12px;
 }
 .section1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 60px;
     
 }
 h2 {
@@ -105,4 +107,33 @@ h2 {
     font-weight: 800;
     text-align: right;
     margin: 0;
+}
+.section3 {
+    display: flex;
+    justify-content: center;
+    padding: 80px;
+}
+.card-section3 {
+    background-color: #3882f6;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    padding: 20px 40px;
+    gap: 80px;
+}
+.section3 button {
+    border: 2px solid #f9faf8;
+}
+.content-section3 p, .content-section3 h3 {
+    margin: 4px 0;
+    color: #f9faf8;
+}
+.content-section3 p {
+    font-weight: 100;
+}
+.footer {
+    display: flex;
+    justify-content: center;
+    background-color: #1f2937;
+    color: #e5e7eb;
 }
